--- a/internalviewmore.css
+++ b/internalviewmore.css
@@ -6,7 +6,7 @@
 /* making margin 0 for every element */
 * {
   margin: 0;
-  transition-duration: 750ms;
+  transition-duration: 1000ms;
 }
 
 /* body setup for formatting for website */
@@ -310,5 +310,150 @@ first-button:focus {
   width: 450px;
   top: 1250px;
   left: 550px;
+  overflow: hidden;
+}
+/*  1939 date on timeline */
+.seventh-date {
+  padding: 10px;
+  background-color: white;
+  position: absolute;
+  top: 1520px;
+  left: 72px;
+  color: #050046;
+  font-size: 32px;
+}
+
+.seventh-line {
+  background-color: #8a8a8a;
+  opacity: 60%;
+  position: absolute;
+  top: 1550px;
+  left: 200px;
+  height: 2px;
+  width: 650px;
+}
+
+.seventh-info {
+  position: absolute;
+  height: 250px;
+  width: 400px;
+  top: 1480px;
+  left: 900px;
+  overflow: hidden;
+}
+/*  1997 date on timeline */
+.eigth-date {
+  padding: 10px;
+  background-color: white;
+  position: absolute;
+  top: 1720px;
+  left: 72px;
+  color: #050046;
+  font-size: 32px;
+}
+
+.eigth-line {
+  background-color: #8a8a8a;
+  opacity: 60%;
+  position: absolute;
+  top: 1750px;
+  left: 200px;
+  height: 2px;
+  width: 400px;
+}
+
+.eigth-info {
+  position: absolute;
+  height: 250px;
+  width: 450px;
+  top: 1660px;
+  left: 650px;
+  overflow: hidden;
+}
+/*  2005 date on timeline */
+.ninth-date {
+  padding: 10px;
+  background-color: white;
+  position: absolute;
+  top: 1900px;
+  left: 72px;
+  color: #050046;
+  font-size: 32px;
+}
+
+.ninth-line {
+  background-color: #8a8a8a;
+  opacity: 60%;
+  position: absolute;
+  top: 1930px;
+  left: 200px;
+  height: 2px;
+  width: 550px;
+}
+
+.ninth-info {
+  position: absolute;
+  height: 250px;
+  width: 450px;
+  top: 1860px;
+  left: 800px;
+  overflow: hidden;
+}
+/*  2015 date on timeline */
+.tenth-date {
+  padding: 10px;
+  background-color: white;
+  position: absolute;
+  top: 2000px;
+  left: 72px;
+  color: #050046;
+  font-size: 32px;
+}
+
+.tenth-line {
+  background-color: #8a8a8a;
+  opacity: 60%;
+  position: absolute;
+  top: 1900px;
+  left: 200px;
+  height: 2px;
+  width: 200px;
+}
+
+.tenth-info {
+  position: absolute;
+  height: 250px;
+  width: 450px;
+  top: 1800px;
+  left: 300px;
+  overflow: hidden;
+}
+/*  2021date on timeline */
+.eleventh-date {
+  padding: 10px;
+  background-color: white;
+  position: absolute;
+  top: 1720px;
+  left: 72px;
+  color: #050046;
+  font-size: 32px;
+}
+
+.eleventh-line {
+  background-color: #8a8a8a;
+  opacity: 60%;
+  position: absolute;
+  top: 1750px;
+  left: 200px;
+  height: 2px;
+  width: 400px;
+}
+
+.eleventh-info {
+  position: absolute;
+  height: 250px;
+  width: 450px;
+  top: 1660px;
+  left: 650px;
   overflow: hidden;
 }
