--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,96 @@
+/* making margin 0 for every element */
+* {
+  margin: 0;
+}
+
+/* body setup for formatting for website */
+body {
+  background-color: white;
+  font-family: "Lexend", sans-serif;
+  color: #0c0475;
+}
+/* making paragraph font colour black to contrast blue titles */
+p {
+  color: black;
+  font-size: 20px;
+  letter-spacing: 0.1mm;
+  line-height: 5.5mm;
+  word-spacing: 0.8mm;
+}
+
+h2 {
+  padding-bottom: 20px;
+}
+/* header formatting, shadow, grid template, fixing position to scroll with page */
+header {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  position: fixed;
+  width: 100%;
+  z-index: 100;
+  background-color: white;
+  display: inline-grid;
+  grid-template-columns: 5% 25% 15% 60%;
+  grid-template-rows: 100px;
+  box-shadow: 0px 0px 100px rgba(0, 0, 0, 0.6);
+  align-items: center;
+  text-align: center;
+  vertical-align: middle;
+}
+h1 {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  font-size: 30px;
+  color: white;
+}
+/*  nav css */
+nav {
+  position: relative;
+  grid-column-start: 4;
+  grid-column-end: 5;
+  z-index: 100;
+}
+ul {
+  font-size: 20px;
+  list-style-type: none;
+}
+
+nav a {
+  text-decoration: none;
+  transition: ease-in-out color 200ms;
+  float: left;
+  padding-left: 50px;
+  padding-right: 50px;
+  color: #0c0475;
+}
+
+/* hover for nav to turn text gold */
+nav a:hover,
+nav a:focus {
+  color: #ceb05f;
+}
+
+/* to make the blue background split on header, really happy with how it turned out */
+.bluesquare {
+  background-color: blue;
+  left: 0px;
+  width: 450px;
+  height: 100px;
+  position: fixed;
+  z-index: -1;
+}
+
+.bluetriangle {
+  width: 0;
+  height: 0;
+  border-bottom: 50px solid transparent;
+  border-right: 100px solid transparent;
+  border-left: 100px solid blue;
+  border-top: 50px solid blue;
+  position: fixed;
+  left: 450px;
+  z-index: -1;
+}
 /*css to create the timeline, pretty messy code */
 .line {
   height: 2800px;
