--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ p {
 
 h2 {
   padding-bottom: 20px;
+  color: #0c0475;
 }
 /* header formatting, shadow, grid template, fixing position to scroll with page */
 header {
